--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
 }
 
 :root {
-    --logo-white: white;
+    --primary-color: white;
     --faded-white: rgb(180, 180, 180);
     --transparent-black: rgba(0, 0, 0, 0.3);
 
     --logo-fs: 2.5rem;
 
-    --main-padding: 2rem;
+    --space-main: 2rem;
 }
 
 * {
@@ -19,13 +19,19 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+}
+
 body {
     display: flex;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-    background-color: rgb(233, 233, 233);
+    background-color: var(--primary-color);
 }
 
-aside {
+.image-sidebar {
     background-image: url(./image/robin-van-geenen-lambo.jpg);
     background-size: cover;
     width: 700px;
@@ -44,16 +50,17 @@ aside {
     padding: 1rem;
     background-color: var(--transparent-black);
     margin-top: calc(100vh / 6);
+    min-width: 22rem;
 }
 
 .logo {
     width: 70px;
 }
 
-.logo-container > span {
+.logo-container > h1 {
     font-family: logo-font, sans-serif;
     font-size: var(--logo-fs);
-    color: var(--logo-white);
+    color: var(--primary-color);
 }
 
 .img-credit {
@@ -67,7 +74,7 @@ aside {
     color: var(--faded-white);
 }
 
-main {
+.content {
     flex: 2;
     display: flex;
     flex-direction: column;
@@ -75,7 +82,7 @@ main {
 }
 
 .description {
-    padding: var(--main-padding);
+    padding: var(--space-main);
     font-weight: 600;
     line-height: 1.3rem;
 }
@@ -86,5 +93,101 @@ main {
 
 form > div {
     background-color: white;
-    padding: 0.8rem var(--main-padding); 
+    padding: 1rem var(--space-main);
+    padding-bottom: 2.5rem; 
+    box-shadow: 1px 4px 10px 1px rgb(214, 214, 214);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    font-weight: 500;
+}
+
+form > div > p {
+    font-size: 1.1rem;
+    font-weight: 500;
+}
+
+.form-row {
+    display: flex;
+    justify-content: flex-start;
+    gap: 4rem;
+}
+
+.form-row > div {
+    display: flex;
+    flex-direction: column;
+}
+
+form > button {
+    margin: var(--space-main);
+    padding: 0.7rem 3rem;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    border: none;
+    box-shadow: 1px 1px 2px black;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+form > p {
+    margin: 0 var(--space-main);
+    font-size: 0.8rem;
+}
+
+label {
+    font-size: 0.6rem;
+    font-weight: 700;
+    color:rgb(105, 102, 102)
+}
+
+input {
+    padding: 0.4rem;
+    width: 14rem;
+    border: 1px solid rgb(212, 212, 212);
+    border-radius: 5px;
+    font-size: 0.6rem;
+}
+
+input:focus {
+    box-shadow: 2px 2px 5px 2px rgb(184, 184, 184);
+}
+
+@media (max-width: 950px) {
+    body {
+        flex-direction: column;
+    }
+
+    .image-sidebar {
+        width: 100%;
+        background-position: 0 40%;
+    }
+
+    .logo-container {
+        margin-top: 8rem;
+        margin-bottom: 10rem;
+    }
+
+    .content {
+        align-items: center;
+    }
+
+    .description {
+        text-align: center;
+    }
+    
+    form {
+        text-align: center;
+    }
+    /* .form-row {
+        flex-direction: column;
+        gap: 1rem;
+    } */
+}
+
+@media (max-width: 600px) { 
+    .form-row {
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
